--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "element-ui": "^2.5.4",
+    "firebase": "^6.3.1",
     "internal-ip": "^4.3.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
