--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "element-ui": "^2.5.4",
+    "file-saver": "^2.0.2",
     "firebase": "^6.3.1",
     "internal-ip": "^4.3.0",
     "jquery": "^3.3.1",
@@ -25,7 +26,8 @@
     "vue-loading-overlay": "^3.1.1",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.6",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.14.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
