--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.6",
     "vuex": "^3.0.1",
-    "xlsx": "^0.14.4"
+    "xlsx": "^0.14.4",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
